[metadata]
name = plover_mouse
version = 0.1.0
description = Control the mouse with Plover
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Erik Crevel
author_email = erik.crevel@ntlworld.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nimble0/plover_mouse
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
    pynput
packages = find:

[options.entry_points]
plover.command =
    mouse_position = plover_mouse:mouse_position
    mouse_move = plover_mouse:mouse_move
    mouse_scroll = plover_mouse:mouse_scroll
    mouse_press = plover_mouse:mouse_press
    mouse_release = plover_mouse:mouse_release
    mouse_click = plover_mouse:mouse_click
